# SDSFuse

./: .gitignore  AUTHORS  Makefile.am  README  README.md  SFSFuse.c  SFSFuse.h  configure.ac
conf_examples/: aligned_aes.ini  aligned_auth_det.ini  aligned_auth_rand.ini  aligned_det.ini  aligned_nop.ini  aligned_nop_padded.ini  default.ini  nop_encode_nop_align.ini  zlog.conf
layers_conf/: SFSConfig.c  SFSConfig.h  layers_def.h
layers_impl/align/: alignfuse.c  alignfuse.h
layers_impl/align/drivers/: batch_blockalign.c  batch_blockalign.h  blockalign.c  blockalign.h  nopalign.c  nopalign.h
layers_impl/crypto/: Makefile.am  sfuse.c  sfuse.h
layers_impl/crypto/drivers/: nopcrypt.c  nopcrypt.h  nopcrypt_padded.h
layers_impl/crypto/drivers/det/: det_authenticated.c  det_authenticated.h  det_symmetric.c  det_symmetric.h
layers_impl/crypto/drivers/openssl/: auth_encryption.c  auth_encryption.h  symmetric.c  symmetric.h
layers_impl/crypto/drivers/rand/: rand_authenticated.c  rand_authenticated.h  rand_symmetric.c  rand_symmetric.h
layers_impl/local/: local.c  local.h
layers_impl/loopback/: multi_loopback.c  multi_loopback.h
layers_impl/loopback/drivers/: erasure.c  xor.c
layers_impl/nop/: nopfuse.c  nopfuse.h
logging/: logdef.c  logdef.h
utils/: utils.c  utils.h
utils/map/: map.c  map.h
